# Hexdim

./: .gitignore  Hexdim.cabal  README.md  cabal.project  hie.yaml  stack.yaml
src/Hexdim/: Circ.hs  Circuit.hs  Core.hs  Datatype.hs  Dsl.hs  Emu.hs  Emulator.hs  Instruction.hs  NVBoard.hs  Pipeline.hs  Prim.hs  ROM.hs  Section.hs  Test.hs  Testbench.hs  Utility.hs
src/Hexdim/Aux/: Pipe.hs
src/Hexdim/Pipe/: #Arith.hs#  .#Arith.hs  Arith.hs  Branch.hs  Data.hs  Fetch.hs  Immed.hs  Memory.hs
src/Hexdim/Section/: Arith.hs  Branch.hs  Immed.hs  Memory.hs
tests/: doctests.hs
verilator/: Makefile  nvboard.cpp  test.cpp  test.rom
